@@ -249,7 +249,7 @@ td { font-size: 90%; }
     without the baseline property will result in a horizontal row of images.  </span>
     </p>
     <p  style="font-size: 115%">
-     Uploads are done by clicking on <b>Browse Server/Upload</b>
+     <span fcklang="DlgImgHelpBrowseUpload">Uploads are done by Clicking on <b>Browse Server/Upload</b></span>
     </p>
 		<table cellspacing="0" cellpadding="0" width="100%" align="center" border="0" style='display:none'>
 			<tr>
