@@ -31,6 +31,7 @@ DlgImgHelpLiBase    : "Use <b>baseline</b> to create a vertical column of images
 DlgImgHelpLiRight   : "Use <b>right</b> and <b>middle</b> to create columns at the center and right.",
 DlgImgHelpNote      : "<b>Note</b>: Placing a column of images in the left margin without the baseline property will result in a horizontal row of images.",
 DlgImgInsert: 'insert into document',
+DlgImgHelpBrowseUpload : "Uploads are done by clicking on <b>Browse Server/Upload</b>",
 
 DlgImgAlertSucess	: "Your file has been successfully uploaded.",
 DlgImgAlertInvalid	: "Invalid file type",
