@@ -1,4 +1,4 @@
-rev 13-Sep_14-16_19
+rev 13-Sep_15-08_03
 
 6 June
 Upgraded from FCKeditor 2.4.1 to 2.6.6.  2.6.6 includes the scayt spellchecker, which is an in-editor spellchecker.
@@ -284,5 +284,7 @@ missing span tag in geshi plugin.
 
 14 Sep
 Updates to languagestrings and code
-
 Fixed some label tags in edit.php
+
+15 Sep
+Updates to language strings in fckeditor
